parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { ANY: peg$parseANY },
        peg$startRuleFunction  = peg$parseANY,

        peg$c0 = function(files) {return files;},
        peg$c1 = "File",
        peg$c2 = peg$literalExpectation("File", false),
        peg$c3 = /^[ ]/,
        peg$c4 = peg$classExpectation([" "], false, false),
        peg$c5 = function(filename, line, type) {return {line,type};},
        peg$c6 = function(filename, lines) { return {File:filename,types:lines.filter(item=>item.line)};},
        peg$c7 = /^[^\n;]/,
        peg$c8 = peg$classExpectation(["\n", ";"], true, false),
        peg$c9 = ";",
        peg$c10 = peg$literalExpectation(";", false),
        peg$c11 = function(name) { return name.join("");},
        peg$c12 = /^[a-zA-Z0-9.]/,
        peg$c13 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "."], false, false),
        peg$c14 = ":",
        peg$c15 = peg$literalExpectation(":", false),
        peg$c16 = /^[0-9]/,
        peg$c17 = peg$classExpectation([["0", "9"]], false, false),
        peg$c18 = function(line) {return Number(line.join(""))},
        peg$c19 = /^[\t]/,
        peg$c20 = peg$classExpectation(["\t"], false, false),
        peg$c21 = /^[\n]/,
        peg$c22 = peg$classExpectation(["\n"], false, false),
        peg$c23 = function(macros) {return {macros};},
        peg$c24 = "Defined at ",
        peg$c25 = peg$literalExpectation("Defined at ", false),
        peg$c26 = "  included at ",
        peg$c27 = peg$literalExpectation("  included at ", false),
        peg$c28 = function(definedat, path) {return path},
        peg$c29 = function(definedat, useddat, def) {return {definedat,useddat,def}},
        peg$c30 = /^[^:]/,
        peg$c31 = peg$classExpectation([":"], true, false),
        peg$c32 = function(file, line) {return {file:file.join(''),line:Number(line.join(''))}},
        peg$c33 = /^[A-Za-z_]/,
        peg$c34 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
        peg$c35 = /^[A-Za-z0-9_]/,
        peg$c36 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
        peg$c37 = function() {return text()},
        peg$c38 = "#define",
        peg$c39 = peg$literalExpectation("#define", false),
        peg$c40 = /^[^\n]/,
        peg$c41 = peg$classExpectation(["\n"], true, false),
        peg$c42 = function(id, value) {return {id,value:value.join('')}},
        peg$c43 = /^[ \t]/,
        peg$c44 = peg$classExpectation([" ", "\t"], false, false),
        peg$c45 = function(ptypes) {return ptypes},
        peg$c46 = "type = ",
        peg$c47 = peg$literalExpectation("type = ", false),
        peg$c48 = "type =",
        peg$c49 = peg$literalExpectation("type =", false),
        peg$c50 = peg$anyExpectation(),
        peg$c51 = function(val) {return val;},
        peg$c52 = function(def) {return {Type:def.join('')};},
        peg$c53 = function(result) { return {type:'checkCStatement',valid:!!result} },
        peg$c54 = "(",
        peg$c55 = peg$literalExpectation("(", false),
        peg$c56 = ")",
        peg$c57 = peg$literalExpectation(")", false),
        peg$c58 = "()",
        peg$c59 = peg$literalExpectation("()", false),
        peg$c60 = "{",
        peg$c61 = peg$literalExpectation("{", false),
        peg$c62 = "}",
        peg$c63 = peg$literalExpectation("}", false),
        peg$c64 = "{}",
        peg$c65 = peg$literalExpectation("{}", false),
        peg$c66 = "[",
        peg$c67 = peg$literalExpectation("[", false),
        peg$c68 = "]",
        peg$c69 = peg$literalExpectation("]", false),
        peg$c70 = "[]",
        peg$c71 = peg$literalExpectation("[]", false),
        peg$c72 = "'",
        peg$c73 = peg$literalExpectation("'", false),
        peg$c74 = /^[^']/,
        peg$c75 = peg$classExpectation(["'"], true, false),
        peg$c76 = "''",
        peg$c77 = peg$literalExpectation("''", false),
        peg$c78 = "\"",
        peg$c79 = peg$literalExpectation("\"", false),
        peg$c80 = /^[^"]/,
        peg$c81 = peg$classExpectation(["\""], true, false),
        peg$c82 = "\"\"",
        peg$c83 = peg$literalExpectation("\"\"", false),
        peg$c84 = /^[^(){}[\]"']/,
        peg$c85 = peg$classExpectation(["(", ")", "{", "}", "[", "]", "\"", "'"], true, false),
        peg$c86 = /^[=,><]/,
        peg$c87 = peg$classExpectation(["=", ",", ">", "<"], false, false),
        peg$c88 = function(out_of_band_records, result_record, end) {return [...out_of_band_records,result_record,end]},
        peg$c89 = "(gdb)",
        peg$c90 = peg$literalExpectation("(gdb)", false),
        peg$c91 = function() {return {type:'sequencebreak'}},
        peg$c92 = "^",
        peg$c93 = peg$literalExpectation("^", false),
        peg$c94 = ",",
        peg$c95 = peg$literalExpectation(",", false),
        peg$c96 = function(token, result_class, result) {return result},
        peg$c97 = function(token, result_class, results) {return{token,type:'result_record',class:result_class,...Object.fromEntries(results)}},
        peg$c98 = "*",
        peg$c99 = peg$literalExpectation("*", false),
        peg$c100 = function(token, async_output) {return{token,type:'notify_async_output',...async_output}},
        peg$c101 = "+",
        peg$c102 = peg$literalExpectation("+", false),
        peg$c103 = function(token, async_output) {return {token,type:'notify_async_output',...async_output}},
        peg$c104 = "=",
        peg$c105 = peg$literalExpectation("=", false),
        peg$c106 = function(async_class, result) {return result},
        peg$c107 = function(async_class, results) {
                return {
                	class:async_class,
                	results:Object.fromEntries(results)
                	}
                },
        peg$c108 = "done",
        peg$c109 = peg$literalExpectation("done", false),
        peg$c110 = "running",
        peg$c111 = peg$literalExpectation("running", false),
        peg$c112 = "connected",
        peg$c113 = peg$literalExpectation("connected", false),
        peg$c114 = "error",
        peg$c115 = peg$literalExpectation("error", false),
        peg$c116 = "exit",
        peg$c117 = peg$literalExpectation("exit", false),
        peg$c118 = function(variable, value) {return [variable,value]},
        peg$c119 = function() {return {}},
        peg$c120 = function(result, _result) {return _result},
        peg$c121 = function(result, results) {
                	return Object.fromEntries([result,...results])
                   },
        peg$c122 = function() {return []},
        peg$c123 = function(value, _value) {return _value},
        peg$c124 = function(value, values) {return [value,...values]},
        peg$c125 = "~",
        peg$c126 = peg$literalExpectation("~", false),
        peg$c127 = function(c_line) {return {type:'console_stream_output',c_line}},
        peg$c128 = "@",
        peg$c129 = peg$literalExpectation("@", false),
        peg$c130 = function(c_line) {return {type:'target_stream_output',c_line}},
        peg$c131 = "&",
        peg$c132 = peg$literalExpectation("&", false),
        peg$c133 = function(c_line) {return {type:'log_stream_output',c_line}},
        peg$c134 = "\n",
        peg$c135 = peg$literalExpectation("\n", false),
        peg$c136 = "\r\n",
        peg$c137 = peg$literalExpectation("\r\n", false),
        peg$c138 = /^[a-zA-Z\-]/,
        peg$c139 = peg$classExpectation([["a", "z"], ["A", "Z"], "-"], false, false),
        peg$c140 = function() {return JSON.parse(text())},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseANY() {
      var s0;

      s0 = peg$parseGDBMI_RECORD();
      if (s0 === peg$FAILED) {
        s0 = peg$parseGDBMI_OUTPUT();
        if (s0 === peg$FAILED) {
          s0 = peg$parseTYPES();
          if (s0 === peg$FAILED) {
            s0 = peg$parseMACROS();
            if (s0 === peg$FAILED) {
              s0 = peg$parsePTYPES();
              if (s0 === peg$FAILED) {
                s0 = peg$parseSTATEMENTS();
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseTYPES() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseFile();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseFile();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseFile() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            if (peg$c3.test(input.charAt(peg$currPos))) {
              s3 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseFileName();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$currPos;
              s7 = peg$parselineNumber();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              if (s7 !== peg$FAILED) {
                s8 = peg$parseblank();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parsetypeName();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parse__();
                    if (s10 === peg$FAILED) {
                      s10 = null;
                    }
                    if (s10 !== peg$FAILED) {
                      peg$savedPos = s6;
                      s7 = peg$c5(s3, s7, s9);
                      s6 = s7;
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$currPos;
                s7 = peg$parselineNumber();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseblank();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsetypeName();
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse__();
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s6;
                        s7 = peg$c5(s3, s7, s9);
                        s6 = s7;
                      } else {
                        peg$currPos = s6;
                        s6 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsetypeName() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c7.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c7.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s2 = peg$c9;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFileName() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c12.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c12.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s2 = peg$c14;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parselineNumber() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c16.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c16.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c17); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s2 = peg$c14;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c18(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseblank() {
      var s0, s1;

      s0 = [];
      if (peg$c19.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          if (peg$c19.test(input.charAt(peg$currPos))) {
            s1 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
        }
      } else {
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parse__() {
      var s0;

      if (peg$c21.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c22); }
      }

      return s0;
    }

    function peg$parseMACROS() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseMACRO();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseMACRO();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c23(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseMACRO() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 11) === peg$c24) {
        s1 = peg$c24;
        peg$currPos += 11;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseLOCATION();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_n();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            if (input.substr(peg$currPos, 14) === peg$c26) {
              s6 = peg$c26;
              peg$currPos += 14;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c27); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseLOCATION();
              if (s7 !== peg$FAILED) {
                s8 = peg$parse_n();
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s6 = peg$c28(s2, s7);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$currPos;
              if (input.substr(peg$currPos, 14) === peg$c26) {
                s6 = peg$c26;
                peg$currPos += 14;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c27); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parseLOCATION();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_n();
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s5;
                    s6 = peg$c28(s2, s7);
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseMACRODEF();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_n();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c29(s2, s4, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseLOCATION() {
      var s0, s1, s2, s3, s4;
